@@ -1,0 +1,11 @@
+; 'global' store - place this file in the base path.
+;-------------------------------------------------------------------------------
+; Composer vendor dir relative to document root.
+vendor-dir = backend/vendor
+
+[packages-by-vendors]
+; *: all packages under vendor.
+; list: specific packages under vendor.
+simplecomplex = *
+more-specific-vendor = *
+solution-vendor[] = solution-package
